# mia-lang

./: .gitignore  Cargo.toml  README.md
doc/: spec.md
src/: grammar.rustpeg  kind.rs  kind_var.rs  lib.rs  main.rs  parse.rs  prim.rs
tests/: grammar.rs
