[package]
name = "mia"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"

description = "A concatenative language."

homepage = "https://github.com/bjz/mia-lang"
repository = "https://github.com/bjz/mia-lang"
readme = "README.md"

keywords = ["mia", "language", "concatenative", "forth"]

[[bin]]
name = "repl"
doc = false

[dependencies]
itertools = "0.4"
linenoise-rust = "0.1.14"
peg = "0.3.8"
